# network-traffic-analysis-ml

./: README.md  pyproject.toml  requirements.txt
scripts/: run_experiment.py
src/network_traffic_ml/: __init__.py  data.py  experiment.py  model.py
tests/: test_classifier.py
