[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "network-traffic-analysis-ml"
version = "0.1.0"
description = "Synthetic network flow classification for telecom traffic analysis"
requires-python = ">=3.10"
dependencies = ["numpy", "pandas", "scikit-learn", "matplotlib"]

[tool.setuptools.packages.find]
where = ["src"]
